2012-12-18  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	bug #37942: Latest SVN can't program in dragon_jtag mode
	* jtagmkII.c (jtagmkII_initialize): For Xmega devices, and
	firmware >= 7.x, don't trigger a RESET, in order to work around a
	firmware bug that appears to be present in at least firmware 7.24
	for the Dragon.

2012-12-04  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* config_gram.y: Implement the "ocdrev" keyword
	* avrpart.c: (Dito)
	* avrpart.h: (Dito)
	* lexer.l: (Dito)
	* avrdude.conf.in: Add "ocdrev" key/value pairs, based
	on the AS6 XML file information.
	* jtag3.c: Use the ocdrev in the parameter block.

2012-12-03  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* jtag3.c: Make jtag3_command() public
	* jtag3.h: (Dito.)
	* jtag3_private.h: Add two new commands
	* stk500v2.c: Implement the "MonCon disable" hack that
	allows temporarily falling back to ISP when trying to
	talk to a part that has debugWIRE enabled

2012-12-03  Rene Liebscher <R.Liebscher@gmx.de>

	* pickit2.c: reordered #includes for non-usb configuration

2012-12-03  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* jtag3.c: Enable interactive adjustment of the various
	clock frequencies (JTAG Xmega, JTAG megaAVR, PDI Xmega)
	through the set_sck_period() callback.

2012-12-03  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* jtag3.c: Remove unused code that was left over from
	cloning the jtagmkII.c implementation

2012-12-03  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* pgm_type.c: Add "jtagice3_isp" programmer hook
	* avrdude.conf.in: Add "jtag3isp" programmer
	* jtag3.c: jtag3_setparm() is now public
	* jtag3.h: (Dito)
	* stk500v2_private.h: Command 0x1D is CMD_SPI_MULTI only
	for STK500v2, AVRISPmkII, and JTAGICEmkII; for JTAGICE3,
	it's CMD_SET_SCK now; also add CMD_GET_SCK
	* avrpart.c (avr_get_output_index): New function
	* avrpart.h: (Dito)
	* stk500v2.c: Implement the pasthrough programmer glue logic
	for JTAGICE3 in ISP mode
	* stk500v2.h: (Dito)
	* avrdude.1: Document the JTAGICE3 support.
